# tigl

./: CMakeLists.txt
bindings/: CMakeLists.txt
bindings/java_internal/: CMakeLists.txt
bindings/java_internal/OCCJava/: build.gradle.in
bindings/java_internal/OCCJava/src/opencascade/: OCCwrapJavaJNI.java  TColStd_HArray1OfBoolean.java  TColStd_HArray2OfBoolean.java  TColStd_MapOfTransient_Iterator.java
examples/java_internal_demo/tigljavainternal/: .gitignore  .project  TiglJavaInternalDemo.launch  build.gradle  settings.gradle
examples/java_internal_demo/tigljavainternal/src/main/java/de/dlr/tigl/javainternal/demo/: TiglJavaInternalDemo.java
src/configuration/: CTiglShapeGeomComponentAdaptor.h
src/fuselage/: CCPACSFuselage.cpp  CCPACSFuselageSegment.cpp
src/wing/: CCPACSWing.cpp  CCPACSWingComponentSegment.cpp
